tab icon update

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/src/assets/nitinKumarShukla.jfif" />
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&family=Inter:wght@400;500&family=Montserrat:wght@600&family=Cormorant+Garamond:wght@600&family=Playwrite+Deutschland+Grundschrift&display=swap"
       rel="stylesheet"
